src/z80asm/z80asm2/t/20-preproc/expected/line_21.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/line_21.asm
Assembling t/20-preproc/input/line_21.asm...
t/20-preproc/input/line_21.asm:1:6: error: Expected line number after LINE
    #line ; no line number
         ^
